resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debugocp
  namespace: debugocp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debugocp
  template:
    metadata:
      labels:
        app: debugocp
    spec:
      containers:
        - name: debugocp-container
          image: docker.io/lasher/debugocp # Imagem Docker a ser usada
          ports:
            - containerPort: 8080
