resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debugocp
  namespace: debugocp
spec:
  selector:
    app: debugocp
  ports:
    - protocol: TCP
      port: 8080 # Porta exposta pelo Service
      targetPort: 8080 # Porta para a qual o tráfego será redirecionado no contêiner do Deployment
